# tauri-duckdb

./: .gitignore  ANDROID_SETUP.md  Cargo.toml  README.md  TODO.md  build.rs  package.json
.github/workflows/: android-duckdb.yml  ci.yml  ios-duckdb.yml.disabled  release-artifacts.yml.disabled
android/: build.gradle.kts  gradlew  settings.gradle.kts
android/src/main/java/DuckdbPlugin/: DuckdbPlugin.kt
android/src/main/java/com/github/bangonkali/tauri/duckdb/: DuckdbPlugin.kt
examples/tauri-app/: README.md  package.json  pnpm-lock.yaml
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
guest-js/: index.ts
permissions/autogenerated/: reference.md
permissions/schemas/: schema.json
scripts/ci/: build-android-duckdb.sh  build-ios-duckdb.sh  local-build-android.sh  prep.sh
src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
