[package]
name = "tauri-plugin-duckdb"
version = "0.1.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-duckdb"

[dependencies]
tauri = { version = "=2.9.3" }
serde = "1.0"
serde_json = "1.0"
thiserror = "2"

[build-dependencies]
tauri-plugin = { version = "2.5.1", features = ["build"] }
